# knowledgecollector

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example1.json  example2.json  example3.json  pyproject.toml  schema.json
assets/: main.typ
uv_minimal_example/: main.py
uv_minimal_example/models/: example_data.py
